Fix some case issues with getElementsByTagName(NS) in tag-soup and XHTML.  Bug 264609, r+sr=jst